<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item android:id="@+id/menu_all"
            android:title="@string/menu_label_all"
            app:showAsAction="collapseActionView"/>

        <item android:id="@+id/menu_date"
            android:title="@string/menu_label_date"
            app:showAsAction="collapseActionView"/>

        <item android:id="@+id/menu_post"
            android:title="@string/menu_label_post"
            app:showAsAction="collapseActionView"/>

        <item android:id="@+id/menu_title_post"
            android:title="@string/menu_label_title"
            app:showAsAction="collapseActionView"/>

        <item android:id="@+id/menu_creat_user"
            android:title="@string/menu_label_creator"
            app:showAsAction="collapseActionView"/>


</menu>